Release 1.20.5-pre3 (snapshot)