@@ -4,246 +4,246 @@ import java.util.Optional;
 import java.util.OptionalInt;
 
 public class sm {
-   public static final ald<eaj<?, ?>> a = sh.a("crimson_fungus");
-   public static final ald<eaj<?, ?>> b = sh.a("crimson_fungus_planted");
-   public static final ald<eaj<?, ?>> c = sh.a("warped_fungus");
-   public static final ald<eaj<?, ?>> d = sh.a("warped_fungus_planted");
-   public static final ald<eaj<?, ?>> e = sh.a("huge_brown_mushroom");
-   public static final ald<eaj<?, ?>> f = sh.a("huge_red_mushroom");
-   public static final ald<eaj<?, ?>> g = sh.a("oak");
-   public static final ald<eaj<?, ?>> h = sh.a("dark_oak");
-   public static final ald<eaj<?, ?>> i = sh.a("birch");
-   public static final ald<eaj<?, ?>> j = sh.a("acacia");
-   public static final ald<eaj<?, ?>> k = sh.a("spruce");
-   public static final ald<eaj<?, ?>> l = sh.a("pine");
-   public static final ald<eaj<?, ?>> m = sh.a("jungle_tree");
-   public static final ald<eaj<?, ?>> n = sh.a("fancy_oak");
-   public static final ald<eaj<?, ?>> o = sh.a("jungle_tree_no_vine");
-   public static final ald<eaj<?, ?>> p = sh.a("mega_jungle_tree");
-   public static final ald<eaj<?, ?>> q = sh.a("mega_spruce");
-   public static final ald<eaj<?, ?>> r = sh.a("mega_pine");
-   public static final ald<eaj<?, ?>> s = sh.a("super_birch_bees_0002");
-   public static final ald<eaj<?, ?>> t = sh.a("super_birch_bees");
-   public static final ald<eaj<?, ?>> u = sh.a("swamp_oak");
-   public static final ald<eaj<?, ?>> v = sh.a("jungle_bush");
-   public static final ald<eaj<?, ?>> w = sh.a("azalea_tree");
-   public static final ald<eaj<?, ?>> x = sh.a("mangrove");
-   public static final ald<eaj<?, ?>> y = sh.a("tall_mangrove");
-   public static final ald<eaj<?, ?>> z = sh.a("cherry");
-   public static final ald<eaj<?, ?>> A = sh.a("oak_bees_0002");
-   public static final ald<eaj<?, ?>> B = sh.a("oak_bees_002");
-   public static final ald<eaj<?, ?>> C = sh.a("oak_bees_005");
-   public static final ald<eaj<?, ?>> D = sh.a("birch_bees_0002");
-   public static final ald<eaj<?, ?>> E = sh.a("birch_bees_002");
-   public static final ald<eaj<?, ?>> F = sh.a("birch_bees_005");
-   public static final ald<eaj<?, ?>> G = sh.a("fancy_oak_bees_0002");
-   public static final ald<eaj<?, ?>> H = sh.a("fancy_oak_bees_002");
-   public static final ald<eaj<?, ?>> I = sh.a("fancy_oak_bees_005");
-   public static final ald<eaj<?, ?>> J = sh.a("fancy_oak_bees");
-   public static final ald<eaj<?, ?>> K = sh.a("cherry_bees_005");
+   public static final ald<eak<?, ?>> a = sh.a("crimson_fungus");
+   public static final ald<eak<?, ?>> b = sh.a("crimson_fungus_planted");
+   public static final ald<eak<?, ?>> c = sh.a("warped_fungus");
+   public static final ald<eak<?, ?>> d = sh.a("warped_fungus_planted");
+   public static final ald<eak<?, ?>> e = sh.a("huge_brown_mushroom");
+   public static final ald<eak<?, ?>> f = sh.a("huge_red_mushroom");
+   public static final ald<eak<?, ?>> g = sh.a("oak");
+   public static final ald<eak<?, ?>> h = sh.a("dark_oak");
+   public static final ald<eak<?, ?>> i = sh.a("birch");
+   public static final ald<eak<?, ?>> j = sh.a("acacia");
+   public static final ald<eak<?, ?>> k = sh.a("spruce");
+   public static final ald<eak<?, ?>> l = sh.a("pine");
+   public static final ald<eak<?, ?>> m = sh.a("jungle_tree");
+   public static final ald<eak<?, ?>> n = sh.a("fancy_oak");
+   public static final ald<eak<?, ?>> o = sh.a("jungle_tree_no_vine");
+   public static final ald<eak<?, ?>> p = sh.a("mega_jungle_tree");
+   public static final ald<eak<?, ?>> q = sh.a("mega_spruce");
+   public static final ald<eak<?, ?>> r = sh.a("mega_pine");
+   public static final ald<eak<?, ?>> s = sh.a("super_birch_bees_0002");
+   public static final ald<eak<?, ?>> t = sh.a("super_birch_bees");
+   public static final ald<eak<?, ?>> u = sh.a("swamp_oak");
+   public static final ald<eak<?, ?>> v = sh.a("jungle_bush");
+   public static final ald<eak<?, ?>> w = sh.a("azalea_tree");
+   public static final ald<eak<?, ?>> x = sh.a("mangrove");
+   public static final ald<eak<?, ?>> y = sh.a("tall_mangrove");
+   public static final ald<eak<?, ?>> z = sh.a("cherry");
+   public static final ald<eak<?, ?>> A = sh.a("oak_bees_0002");
+   public static final ald<eak<?, ?>> B = sh.a("oak_bees_002");
+   public static final ald<eak<?, ?>> C = sh.a("oak_bees_005");
+   public static final ald<eak<?, ?>> D = sh.a("birch_bees_0002");
+   public static final ald<eak<?, ?>> E = sh.a("birch_bees_002");
+   public static final ald<eak<?, ?>> F = sh.a("birch_bees_005");
+   public static final ald<eak<?, ?>> G = sh.a("fancy_oak_bees_0002");
+   public static final ald<eak<?, ?>> H = sh.a("fancy_oak_bees_002");
+   public static final ald<eak<?, ?>> I = sh.a("fancy_oak_bees_005");
+   public static final ald<eak<?, ?>> J = sh.a("fancy_oak_bees");
+   public static final ald<eak<?, ?>> K = sh.a("cherry_bees_005");
 
-   private static edw.a a(dex $$0, dex $$1, int $$2, int $$3, int $$4, int $$5) {
-      return new edw.a(efb.a($$0), new egd($$2, $$3, $$4), efb.a($$1), new eeh(bpu.a($$5), bpu.a(0), 3), new eee(1, 0, 1));
+   private static edx.a a(dey $$0, dey $$1, int $$2, int $$3, int $$4, int $$5) {
+      return new edx.a(efc.a($$0), new ege($$2, $$3, $$4), efc.a($$1), new eei(bpv.a($$5), bpv.a(0), 3), new eef(1, 0, 1));
    }
 
-   private static edw.a a() {
-      return a(dez.U, dez.aE, 4, 2, 0, 2).a();
+   private static edx.a a() {
+      return a(dfa.U, dfa.aE, 4, 2, 0, 2).a();
    }
 
-   private static edw.a b() {
-      return a(dez.W, dez.aG, 5, 2, 0, 2).a();
+   private static edx.a b() {
+      return a(dfa.W, dfa.aG, 5, 2, 0, 2).a();
    }
 
-   private static edw.a c() {
-      return a(dez.W, dez.aG, 5, 2, 6, 2).a();
+   private static edx.a c() {
+      return a(dfa.W, dfa.aG, 5, 2, 6, 2).a();
    }
 
-   private static edw.a d() {
-      return a(dez.X, dez.aH, 4, 8, 0, 2);
+   private static edx.a d() {
+      return a(dfa.X, dfa.aH, 4, 8, 0, 2);
    }
 
-   private static edw.a e() {
-      return new edw.a(efb.a(dez.U), new efz(3, 11, 0), efb.a(dez.aE), new eel(bpu.a(2), bpu.a(4), 4), new eee(0, 0, 0, OptionalInt.of(4))).a();
+   private static edx.a e() {
+      return new edx.a(efc.a(dfa.U), new ega(3, 11, 0), efc.a(dfa.aE), new eem(bpv.a(2), bpv.a(4), 4), new eef(0, 0, 0, OptionalInt.of(4))).a();
    }
 
-   private static edw.a f() {
-      return new edw.a(
-            efb.a(dez.Z),
-            new efx(7, 1, 0, new bqe(bpc.<bpx>a().a(bpu.a(1), 1).a(bpu.a(2), 1).a(bpu.a(3), 1).a()), bqd.a(2, 4), bqd.a(-4, -3), bqd.a(-1, 0)),
-            efb.a(dez.aJ),
-            new eej(bpu.a(4), bpu.a(0), bpu.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
-            new eee(1, 0, 2)
+   private static edx.a f() {
+      return new edx.a(
+            efc.a(dfa.Z),
+            new efy(7, 1, 0, new bqf(bpd.<bpy>a().a(bpv.a(1), 1).a(bpv.a(2), 1).a(bpv.a(3), 1).a()), bqe.a(2, 4), bqe.a(-4, -3), bqe.a(-1, 0)),
+            efc.a(dfa.aJ),
+            new eek(bpv.a(4), bpv.a(0), bpv.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
+            new eef(1, 0, 2)
          )
          .a();
    }
 
-   public static void a(rc<eaj<?, ?>> $$0) {
-      jj<dex> $$1 = $$0.a(lq.f);
-      dyz $$2 = dyz.a(
-         dez.x,
-         dez.y,
-         dez.z,
-         dez.A,
-         dez.B,
-         dez.C,
-         dez.D,
-         dez.E,
-         dez.bR,
-         dez.bS,
-         dez.bT,
-         dez.bU,
-         dez.bV,
-         dez.bW,
-         dez.bX,
-         dez.bY,
-         dez.bZ,
-         dez.ca,
-         dez.cb,
-         dez.cc,
-         dez.cd,
-         dez.ce,
-         dez.cf,
-         dez.cg,
-         dez.cB,
-         dez.dS,
-         dez.fb,
-         dez.fc,
-         dez.fd,
-         dez.fe,
-         dez.fm,
-         dez.fq,
-         dez.fC,
-         dez.gt,
-         dez.gu,
-         dez.ku,
-         dez.kv,
-         dez.kA,
-         dez.kB,
-         dez.kD,
-         dez.oi,
-         dez.oo,
-         dez.ox,
-         dez.oz,
-         dez.oA,
-         dez.oB,
-         dez.oC,
-         dez.sv,
-         dez.sw,
-         dez.sx,
-         dez.sy,
-         dez.sz,
-         dez.sA,
-         dez.sB,
-         dez.sD,
-         dez.sE,
-         dez.sF
+   public static void a(rc<eak<?, ?>> $$0) {
+      jj<dey> $$1 = $$0.a(lq.f);
+      dza $$2 = dza.a(
+         dfa.x,
+         dfa.y,
+         dfa.z,
+         dfa.A,
+         dfa.B,
+         dfa.C,
+         dfa.D,
+         dfa.E,
+         dfa.bR,
+         dfa.bS,
+         dfa.bT,
+         dfa.bU,
+         dfa.bV,
+         dfa.bW,
+         dfa.bX,
+         dfa.bY,
+         dfa.bZ,
+         dfa.ca,
+         dfa.cb,
+         dfa.cc,
+         dfa.cd,
+         dfa.ce,
+         dfa.cf,
+         dfa.cg,
+         dfa.cB,
+         dfa.dS,
+         dfa.fb,
+         dfa.fc,
+         dfa.fd,
+         dfa.fe,
+         dfa.fm,
+         dfa.fq,
+         dfa.fC,
+         dfa.gt,
+         dfa.gu,
+         dfa.ku,
+         dfa.kv,
+         dfa.kA,
+         dfa.kB,
+         dfa.kD,
+         dfa.oi,
+         dfa.oo,
+         dfa.ox,
+         dfa.oz,
+         dfa.oA,
+         dfa.oB,
+         dfa.oC,
+         dfa.sv,
+         dfa.sw,
+         dfa.sx,
+         dfa.sy,
+         dfa.sz,
+         dfa.sA,
+         dfa.sB,
+         dfa.sD,
+         dfa.sE,
+         dfa.sF
       );
-      sh.a($$0, a, eaw.U, new ebf(dez.ow.o(), dez.os.o(), dez.kK.o(), dez.oy.o(), $$2, false));
-      sh.a($$0, b, eaw.U, new ebf(dez.ow.o(), dez.os.o(), dez.kK.o(), dez.oy.o(), $$2, true));
-      sh.a($$0, c, eaw.U, new ebf(dez.on.o(), dez.oj.o(), dez.op.o(), dez.oy.o(), $$2, false));
-      sh.a($$0, d, eaw.U, new ebf(dez.on.o(), dez.oj.o(), dez.op.o(), dez.oy.o(), $$2, true));
+      sh.a($$0, a, eax.U, new ebg(dfa.ow.o(), dfa.os.o(), dfa.kK.o(), dfa.oy.o(), $$2, false));
+      sh.a($$0, b, eax.U, new ebg(dfa.ow.o(), dfa.os.o(), dfa.kK.o(), dfa.oy.o(), $$2, true));
+      sh.a($$0, c, eax.U, new ebg(dfa.on.o(), dfa.oj.o(), dfa.op.o(), dfa.oy.o(), $$2, false));
+      sh.a($$0, d, eax.U, new ebg(dfa.on.o(), dfa.oj.o(), dfa.op.o(), dfa.oy.o(), $$2, true));
       sh.a(
          $$0,
          e,
-         eaw.r,
-         new edc(
-            efb.a(dez.eT.o().a(diu.f, Boolean.valueOf(true)).a(diu.g, Boolean.valueOf(false))),
-            efb.a(dez.eV.o().a(diu.f, Boolean.valueOf(false)).a(diu.g, Boolean.valueOf(false))),
+         eax.r,
+         new edd(
+            efc.a(dfa.eT.o().a(div.f, Boolean.valueOf(true)).a(div.g, Boolean.valueOf(false))),
+            efc.a(dfa.eV.o().a(div.f, Boolean.valueOf(false)).a(div.g, Boolean.valueOf(false))),
             3
          )
       );
       sh.a(
          $$0,
          f,
-         eaw.q,
-         new edc(efb.a(dez.eU.o().a(diu.g, Boolean.valueOf(false))), efb.a(dez.eV.o().a(diu.f, Boolean.valueOf(false)).a(diu.g, Boolean.valueOf(false))), 2)
+         eax.q,
+         new edd(efc.a(dfa.eU.o().a(div.g, Boolean.valueOf(false))), efc.a(dfa.eV.o().a(div.f, Boolean.valueOf(false)).a(div.g, Boolean.valueOf(false))), 2)
       );
-      efp $$3 = new efp(0.002F);
-      efp $$4 = new efp(0.01F);
-      efp $$5 = new efp(0.02F);
-      efp $$6 = new efp(0.05F);
-      efp $$7 = new efp(1.0F);
-      sh.a($$0, g, eaw.f, a().c());
+      efq $$3 = new efq(0.002F);
+      efq $$4 = new efq(0.01F);
+      efq $$5 = new efq(0.02F);
+      efq $$6 = new efq(0.05F);
+      efq $$7 = new efq(1.0F);
+      sh.a($$0, g, eax.f, a().c());
       sh.a(
          $$0,
          h,
-         eaw.f,
-         new edw.a(efb.a(dez.aa), new efy(6, 2, 1), efb.a(dez.aK), new eek(bpu.a(0), bpu.a(0)), new eed(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
+         eax.f,
+         new edx.a(efc.a(dfa.aa), new efz(6, 2, 1), efc.a(dfa.aK), new eel(bpv.a(0), bpv.a(0)), new eee(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
       );
-      sh.a($$0, i, eaw.f, b().c());
-      sh.a($$0, j, eaw.f, new edw.a(efb.a(dez.Y), new ega(5, 2, 2), efb.a(dez.aI), new eeg(bpu.a(2), bpu.a(0)), new eee(1, 0, 2)).a().c());
-      sh.a($$0, z, eaw.f, f().c());
-      sh.a($$0, K, eaw.f, f().a(List.of($$6)).c());
-      sh.a($$0, k, eaw.f, new edw.a(efb.a(dez.V), new egd(5, 2, 1), efb.a(dez.aF), new ees(bqd.a(2, 3), bqd.a(0, 2), bqd.a(1, 2)), new eee(2, 0, 2)).a().c());
-      sh.a($$0, l, eaw.f, new edw.a(efb.a(dez.V), new egd(6, 4, 0), efb.a(dez.aF), new eeq(bpu.a(1), bpu.a(1), bqd.a(3, 4)), new eee(2, 0, 2)).a().c());
-      sh.a($$0, m, eaw.f, d().a(ImmutableList.of(new efq(0.2F), efu.b, new efr(0.25F))).a().c());
-      sh.a($$0, n, eaw.f, e().c());
-      sh.a($$0, o, eaw.f, d().a().c());
+      sh.a($$0, i, eax.f, b().c());
+      sh.a($$0, j, eax.f, new edx.a(efc.a(dfa.Y), new egb(5, 2, 2), efc.a(dfa.aI), new eeh(bpv.a(2), bpv.a(0)), new eef(1, 0, 2)).a().c());
+      sh.a($$0, z, eax.f, f().c());
+      sh.a($$0, K, eax.f, f().a(List.of($$6)).c());
+      sh.a($$0, k, eax.f, new edx.a(efc.a(dfa.V), new ege(5, 2, 1), efc.a(dfa.aF), new eet(bqe.a(2, 3), bqe.a(0, 2), bqe.a(1, 2)), new eef(2, 0, 2)).a().c());
+      sh.a($$0, l, eax.f, new edx.a(efc.a(dfa.V), new ege(6, 4, 0), efc.a(dfa.aF), new eer(bpv.a(1), bpv.a(1), bqe.a(3, 4)), new eef(2, 0, 2)).a().c());
+      sh.a($$0, m, eax.f, d().a(ImmutableList.of(new efr(0.2F), efv.b, new efs(0.25F))).a().c());
+      sh.a($$0, n, eax.f, e().c());
+      sh.a($$0, o, eax.f, d().a().c());
       sh.a(
          $$0,
          p,
-         eaw.f,
-         new edw.a(efb.a(dez.X), new egc(10, 2, 19), efb.a(dez.aH), new eeo(bpu.a(2), bpu.a(0), 2), new eee(1, 1, 2))
-            .a(ImmutableList.of(efu.b, new efr(0.25F)))
+         eax.f,
+         new edx.a(efc.a(dfa.X), new egd(10, 2, 19), efc.a(dfa.aH), new eep(bpv.a(2), bpv.a(0), 2), new eef(1, 1, 2))
+            .a(ImmutableList.of(efv.b, new efs(0.25F)))
             .c()
       );
       sh.a(
          $$0,
          q,
-         eaw.f,
-         new edw.a(efb.a(dez.V), new egb(13, 2, 14), efb.a(dez.aF), new eep(bpu.a(0), bpu.a(0), bqd.a(13, 17)), new eee(1, 1, 2))
-            .a(ImmutableList.of(new efn(efb.a(dez.l))))
+         eax.f,
+         new edx.a(efc.a(dfa.V), new egc(13, 2, 14), efc.a(dfa.aF), new eeq(bpv.a(0), bpv.a(0), bqe.a(13, 17)), new eef(1, 1, 2))
+            .a(ImmutableList.of(new efo(efc.a(dfa.l))))
             .c()
       );
       sh.a(
          $$0,
          r,
-         eaw.f,
-         new edw.a(efb.a(dez.V), new egb(13, 2, 14), efb.a(dez.aF), new eep(bpu.a(0), bpu.a(0), bqd.a(3, 7)), new eee(1, 1, 2))
-            .a(ImmutableList.of(new efn(efb.a(dez.l))))
+         eax.f,
+         new edx.a(efc.a(dfa.V), new egc(13, 2, 14), efc.a(dfa.aF), new eeq(bpv.a(0), bpv.a(0), bqe.a(3, 7)), new eef(1, 1, 2))
+            .a(ImmutableList.of(new efo(efc.a(dfa.l))))
             .c()
       );
-      sh.a($$0, s, eaw.f, c().a(ImmutableList.of($$3)).c());
-      sh.a($$0, t, eaw.f, c().a(ImmutableList.of($$7)).c());
-      sh.a($$0, u, eaw.f, a(dez.U, dez.aE, 5, 3, 0, 3).a(ImmutableList.of(new efr(0.25F))).c());
-      sh.a($$0, v, eaw.f, new edw.a(efb.a(dez.X), new egd(1, 0, 0), efb.a(dez.aE), new eei(bpu.a(2), bpu.a(1), 2), new eee(0, 0, 0)).c());
+      sh.a($$0, s, eax.f, c().a(ImmutableList.of($$3)).c());
+      sh.a($$0, t, eax.f, c().a(ImmutableList.of($$7)).c());
+      sh.a($$0, u, eax.f, a(dfa.U, dfa.aE, 5, 3, 0, 3).a(ImmutableList.of(new efs(0.25F))).c());
+      sh.a($$0, v, eax.f, new edx.a(efc.a(dfa.X), new ege(1, 0, 0), efc.a(dfa.aE), new eej(bpv.a(2), bpv.a(1), 2), new eef(0, 0, 0)).c());
       sh.a(
          $$0,
          w,
-         eaw.f,
-         new edw.a(
-               efb.a(dez.U),
-               new efw(4, 2, 0, 3, bqd.a(1, 2)),
-               new efl(bpc.<dsa>a().a(dez.aM.o(), 3).a(dez.aN.o(), 1)),
-               new eer(bpu.a(3), bpu.a(0), bpu.a(2), 50),
-               new eee(1, 0, 1)
+         eax.f,
+         new edx.a(
+               efc.a(dfa.U),
+               new efx(4, 2, 0, 3, bqe.a(1, 2)),
+               new efm(bpd.<dsb>a().a(dfa.aM.o(), 3).a(dfa.aN.o(), 1)),
+               new ees(bpv.a(3), bpv.a(0), bpv.a(2), 50),
+               new eef(1, 0, 1)
             )
-            .a(efb.a(dez.sH))
+            .a(efc.a(dfa.sH))
             .b()
             .c()
       );
       sh.a(
          $$0,
          x,
-         eaw.f,
-         new edw.a(
-               efb.a(dez.ab),
-               new egg(2, 1, 4, bqd.a(1, 4), 0.5F, bqd.a(0, 1), $$1.b(awo.cj)),
-               efb.a(dez.aL),
-               new eer(bpu.a(3), bpu.a(0), bpu.a(2), 70),
+         eax.f,
+         new edx.a(
+               efc.a(dfa.ab),
+               new egh(2, 1, 4, bqe.a(1, 4), 0.5F, bqe.a(0, 1), $$1.b(awo.cj)),
+               efc.a(dfa.aL),
+               new ees(bpv.a(3), bpv.a(0), bpv.a(2), 70),
                Optional.of(
-                  new eex(
-                     bqd.a(1, 3),
-                     efb.a(dez.ac),
-                     Optional.of(new eev(efb.a(dez.sA), 0.5F)),
-                     new eew($$1.b(awo.ck), jm.a(dex::s, dez.sI, dez.ad), efb.a(dez.ad), 8, 15, 0.2F)
+                  new eey(
+                     bqe.a(1, 3),
+                     efc.a(dfa.ac),
+                     Optional.of(new eew(efc.a(dfa.sA), 0.5F)),
+                     new eex($$1.b(awo.ck), jm.a(dey::s, dfa.sI, dfa.ad), efc.a(dfa.ad), 8, 15, 0.2F)
                   )
                ),
-               new eee(2, 0, 2)
+               new eef(2, 0, 2)
             )
             .a(
                List.of(
-                  new efr(0.125F), new efo(0.14F, 1, 0, new efh(efb.a(dez.E.o().a(djs.d, Boolean.valueOf(true))), djs.b, bqd.a(0, 4)), 2, List.of(je.a)), $$4
+                  new efs(0.125F), new efp(0.14F, 1, 0, new efi(efc.a(dfa.E.o().a(djt.d, Boolean.valueOf(true))), djt.b, bqe.a(0, 4)), 2, List.of(je.a)), $$4
                )
             )
             .a()
@@ -252,39 +252,39 @@ public class sm {
       sh.a(
          $$0,
          y,
-         eaw.f,
-         new edw.a(
-               efb.a(dez.ab),
-               new egg(4, 1, 9, bqd.a(1, 6), 0.5F, bqd.a(0, 1), $$1.b(awo.cj)),
-               efb.a(dez.aL),
-               new eer(bpu.a(3), bpu.a(0), bpu.a(2), 70),
+         eax.f,
+         new edx.a(
+               efc.a(dfa.ab),
+               new egh(4, 1, 9, bqe.a(1, 6), 0.5F, bqe.a(0, 1), $$1.b(awo.cj)),
+               efc.a(dfa.aL),
+               new ees(bpv.a(3), bpv.a(0), bpv.a(2), 70),
                Optional.of(
-                  new eex(
-                     bqd.a(3, 7),
-                     efb.a(dez.ac),
-                     Optional.of(new eev(efb.a(dez.sA), 0.5F)),
-                     new eew($$1.b(awo.ck), jm.a(dex::s, dez.sI, dez.ad), efb.a(dez.ad), 8, 15, 0.2F)
+                  new eey(
+                     bqe.a(3, 7),
+                     efc.a(dfa.ac),
+                     Optional.of(new eew(efc.a(dfa.sA), 0.5F)),
+                     new eex($$1.b(awo.ck), jm.a(dey::s, dfa.sI, dfa.ad), efc.a(dfa.ad), 8, 15, 0.2F)
                   )
                ),
-               new eee(3, 0, 2)
+               new eef(3, 0, 2)
             )
             .a(
                List.of(
-                  new efr(0.125F), new efo(0.14F, 1, 0, new efh(efb.a(dez.E.o().a(djs.d, Boolean.valueOf(true))), djs.b, bqd.a(0, 4)), 2, List.of(je.a)), $$4
+                  new efs(0.125F), new efp(0.14F, 1, 0, new efi(efc.a(dfa.E.o().a(djt.d, Boolean.valueOf(true))), djt.b, bqe.a(0, 4)), 2, List.of(je.a)), $$4
                )
             )
             .a()
             .c()
       );
-      sh.a($$0, A, eaw.f, a().a(List.of($$3)).c());
-      sh.a($$0, B, eaw.f, a().a(List.of($$5)).c());
-      sh.a($$0, C, eaw.f, a().a(List.of($$6)).c());
-      sh.a($$0, D, eaw.f, b().a(List.of($$3)).c());
-      sh.a($$0, E, eaw.f, b().a(List.of($$5)).c());
-      sh.a($$0, F, eaw.f, b().a(List.of($$6)).c());
-      sh.a($$0, G, eaw.f, e().a(List.of($$3)).c());
-      sh.a($$0, H, eaw.f, e().a(List.of($$5)).c());
-      sh.a($$0, I, eaw.f, e().a(List.of($$6)).c());
-      sh.a($$0, J, eaw.f, e().a(List.of($$7)).c());
+      sh.a($$0, A, eax.f, a().a(List.of($$3)).c());
+      sh.a($$0, B, eax.f, a().a(List.of($$5)).c());
+      sh.a($$0, C, eax.f, a().a(List.of($$6)).c());
+      sh.a($$0, D, eax.f, b().a(List.of($$3)).c());
+      sh.a($$0, E, eax.f, b().a(List.of($$5)).c());
+      sh.a($$0, F, eax.f, b().a(List.of($$6)).c());
+      sh.a($$0, G, eax.f, e().a(List.of($$3)).c());
+      sh.a($$0, H, eax.f, e().a(List.of($$5)).c());
+      sh.a($$0, I, eax.f, e().a(List.of($$6)).c());
+      sh.a($$0, J, eax.f, e().a(List.of($$7)).c());
    }
 }
